@@ -33,7 +33,7 @@ object Dependencies {
     val scalding         = "0.8.11"
     val scalaz7          = "7.0.0"
     val snowplowRawEvent = "0.1.0"
-    val commonEnrich     = "0.4.0"
+    val commonEnrich     = "0.5.0-SNAPSHOT"
     // Scala (test only)
     val specs2           = "1.14"
     val scalazSpecs2     = "0.1.2"
